# ros-speaker

./: CMakeLists.txt  README.md  package.xml
launch/: speaker.launch
src/: speaker.py
